# event.store

./: .envrc  .gitignore  .readthedocs.yaml  .rubocop.yml  .tool-versions  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Gemfile  NOTES.md  README.md  Rakefile  alembic.ini  docker-compose.yml  go  mise.toml  mkdocs.yml  package-lock.json  pyproject.toml
.circleci/: config.yml  gpg.private.enc
.git-crypt/keys/default/0/: 251B5AB7327C561BA66D36AE4C673E5519EBFF84.gpg  41D2606F66C3FF28874362B61A16916844CE9D82.gpg  52369E5FF72F14B706A4327E1172C8D4ACE705BF.gpg  933E3994686DC15C99D1369844037399AEDB1D8D.gpg  D164A61C69E23C0F74475FBE5FFE76AD095FCA07.gpg  EFFBD4F3F65D492DAF12AD3FD124B902E421F48E.gpg
.github/actions/asdf-cached-install/: action.yml
.github/workflows/: check-test-build.yaml  main.yaml  pr-checks.yaml
changelog.d/: 20250318_152631_tobyclemson_json_value_and_event_generics.md  20250319_132415_corin_cc_retry_on_error_decorator.md  20250319_132415_corinchaplin_retry_on_error_decorator.md  20250325_130513_corin_cc_write_condition_combinators.md  20250325_131026_jonassvalin_fix_race_condition_in_coordinator.md  20250327_135941_tobyclemson_fix_event_and_projector_generics.md  20250328_103515_tobyclemson_allow_persistable_name_and_payload_in_event_store.md  20250331_155642_tobyclemson_and_davie_allow_customisable_serialisation_guarantee.md  20250411_161942_jonassvalin_error_handling.md  20250411_164324_johncowie_fix_default_subscriber_id.md  20250411_195612_tobyclemson_attempt_fix_subscription_logic.md  20250513_090905_liamgriffinjowett_add_event_log.md  20250514_132143_tobyclemson_rework_postgres_integration.md  20250519_093138_tobyclemson_add_function_support_in_projection_store_queries.md  20250601_162217_tobyclemson_broker_upgrades.md  20250609_114744_daviemoston_regex_matches.md  20250611_175412_johncowie_collapse_event_store_event_source_factories.md  20250612_210627_tobyclemson.md  20250616_134153_tobyclemson.md  20250622_214646_tobyclemson_category_publish.md  20250703_154104_jonassvalin.md  20250709_091249_daviemoston_not_regex_matches.md  20250711_122431_corin_cc_any_event_source.md  20250731_113929_corin_cc_iterator_based_consumer.md  20250731_115216_corin_cc_non_int_sq_ids.md  20250910_141253_adammelin_state_backwards_compat.md  20250915_152032_corin_none_regex_search.md  20250916_103621_corin_is_not_none.md  20251017_101750_corin_cc_reset_state.md  20251127_002447_tobyclemson_switch_to_mise_and_uv.md  20251201_190227_ci_switch_to_pyrefly.md  20251218_112815_corin_cc_service_manager_context_manager.md  20260126_110222_daviemoston_add_category_stream_sequence_number_index.md  20260302_104148_corin_cc_type_update.md  20260305_174432_adam.melin_events_paging.md  20260309_130645_adammelin_events_paging_constraint.md  20260427_105913_corin_cc_callable_service.md  20260427_105944_corin_cc_error_handling_composition.md  20260427_110033_corin_cc_polling_service_like.md  20260427_110110_corin_cc_status_tracking_service.md  (+7 more)
config/gpg/: jakob.gpg.public
config/secrets/ci/: encryption.passphrase  gpg.private  gpg.public  ssh.private  ssh.public
config/secrets/circle_ci/: config.yaml
config/secrets/github/: config.yaml
config/secrets/pypi/: config.yaml
docs/: index.md
docs/javascript/: readthedocs.js
documentations/: README.md  api-reference.md  events.md  overview.md  projections.md  query-system.md  storage-adapters.md  testing.md  transactions.md
meta/examples/subscriber_registration/: all_in_one_function.py  consumer_registrar.py  register_many_function.py  register_one_function.py  subsytem_creator.py
meta/plans/: 2025-11-26-poetry-to-uv-migration.md  2025-12-02-broker-role-support.md  2025-12-02-event-runtime-abstraction.md  2026-06-11-event-metadata.md  2026-06-24-event-metadata.md  2026-07-07-batch-level-publish-metadata.md
meta/prs/: 85-description.md
meta/research/: 2025-11-26-poetry-to-uv-migration.md  2025-12-02-event-processing-node-abstraction.md
meta/reviews/prs/: 116-review-1.md  116-review-2.md
meta/specs/: 2026-06-11-event-metadata-design.md
meta/templates/: pr-description.md
migrations/versions/: 1fc478835542_add_sequence_number_to_events.py  ab5994a38d82_make_dates_timezoned.py  de443b0391c2_create_events.py
scripts/ci/common/: configure-asdf.sh  configure-git.sh  configure-nodejs.sh  configure-poetry.sh  install-asdf.sh  install-git-crypt.sh  install-slack-deps.sh
scripts/ci/steps/: build.sh  prerelease.sh  release.sh
sql/: create_events_indices.sql  create_events_table.sql  create_nodes_indices.sql  create_nodes_table.sql  create_projections_indices.sql  create_projections_table.sql  create_subscribers_indices.sql  create_subscribers_table.sql  create_subscriptions_indices.sql  create_subscriptions_table.sql
src/event/store/adapters/: __init__.py
src/logicblocks/event/db/: __init__.py
src/logicblocks/event/persistence/: __init__.py
src/logicblocks/event/persistence/in_memory/: __init__.py
src/logicblocks/event/processing/: NOTES.md  __init__.py
src/logicblocks/event/projection/: __init__.py  projector.py  projector_with_none.py  with_position_metadata_mixin.py
src/logicblocks/event/query/: clauses.py  functions.py  queries.py
src/logicblocks/event/sources/: __init__.py  base.py  constrained.py  constraints.py  in_memory.py  iterator.py  memory.py
src/logicblocks/event/store/: __init__.py  conditions.py  constraints.py  sources.py  state.py  store.py  tracing.py  transactions.py  types.py
src/logicblocks/event/testing/: builders.py  data.py
src/logicblocks/event/types/: __init__.py  conversion.py  event.py  identifier.py  json.py  projection.py
src/logicblocks/projection/: projection.py
tasks/: __init__.py  build.py  changelog.py  deps.py  docs.py  format.py  git.py  lint.py  package.py  release.py  test.py  types.py  version.py
tasks/shared/: project.py
tests/component/: conftest.py  test_asynchronous_projections.py  test_processing.py
tests/integration/logicblocks/event/: conftest.py
tests/unit/logicblocks/event/: conftest.py
tests/unit/logicblocks/projection/: test_projection.py
(+312 files in other folders)
