[project]
requires-python = ">=3.13,<4.0"
name = "logicblocks.event.store"
version = "0.1.10a13"
description = "Eventing infrastructure for event sourced architectures."
authors = [
    { name = "Toby Clemson", email = "tobyclemson@gmail.com" },
    { name= "Jonas Svalin", email = "jonassvalin@gmail.com" }
]
license = "MIT"
readme = "README.md"
dependencies = [
    "psycopg[binary,pool]>=3.2.3,<4",
    "uvloop>=0.21.0,<0.22",
    "pyheck>=0.1.5,<0.2",
    "structlog>=25.1.0,<26",
    "rich>=14.0.0,<15",
    "aiologic>=0.14.0,<0.15",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10,<8",
    "junitparser>=3.2.0,<4",
    "pyright[nodejs]>=1.1.391,<2",
    "pytest>=8.3.4,<9",
    "pytest-asyncio>=0.26.0,<0.27",
    "pytest-cov>=6.0.0,<7",
    "pytest-diff>=0.1.14,<0.2",
    "pytest-pretty>=1.2.0,<2",
    "pytest-repeat>=0.9.3,<0.10",
    "pytest-unordered>=0.6.1,<0.7",
    "ruff>=0.11.0,<0.12",
]
build = [
    "invoke>=2.2.1,<3",
]
changelog = [
    "scriv>=1.5.1,<2",
]
docs = [
    "mkdocs-material>=9.5.47,<10",
    "mkdocstrings[python]>=0.29.0,<0.30",
    "black>=25.1.0,<26",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests/shared"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--capture=no",
    "--cov=./src"
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = ["@abstract"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.pylint]
max-args = 7
allow-magic-value-types = ["str", "bytes", "int"]

[tool.pyright]
include = ["src", "tests/shared", "tests/unit", "tests/integration"]
extraPaths = ["src", "tests/shared"]

[[tool.pyright.executionEnvironments]]
root = "src"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
reportMissingTypeStubs = "error"
reportAssertAlwaysTrue = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidTypeVarUse = "error"
reportSelfClsParameterName = "error"
reportUnsupportedDunderAll = "error"
reportUnusedExpression = "error"
reportWildcardImportFromLibrary = "error"
reportDuplicateImport = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStubStatement = "error"
reportMatchNotExhaustive = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportPrivateUsage = "error"
reportTypeCommentUsage = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownMemberType = "error"
reportUnknownParameterType = "error"
reportUnknownVariableType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnnecessaryIsInstance = "error"
reportUnusedClass = "error"
reportUnusedImport = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"

[tool.scriv]
version = "literal: pyproject.toml: project.version"
format = "md"

[tool.hatch.build.targets.wheel]
packages = ["src/logicblocks"]

[tool.hatch.build.targets.sdist]
include = ["src/logicblocks"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
